「UPDATE」更新bower.json主文件

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "mobile",
   "description": "",
-  "main": "",
+  "main": "app.js",
   "authors": [
     "xiangqingyi <1352493573@qq.com>"
   ],
